--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
         font-size: 16px;
         margin: 0 150px;
         color:color: hsl(234, 93%, 48%);
+        text-align: justify;
+        text-justify: inter-word;  
     }
 
     h1{
@@ -44,9 +46,13 @@
             margin: 4 350px;}
 
             li{
-                color:rgb(24, 20, 20);
+            color:rgb(24, 20, 20);
             font-size: 20px;
+            margin: 0 150px;
+            padding: 5px;
             font-weight: bold;
+            text-align: justify;
+            text-justify: inter-word;  
             }
 
         h2{color:black;
@@ -119,7 +125,11 @@
         <p>A pelagem pode ir do amarelo-acinzentado ao vermelho-amarronzado, com manchas e 
             pintas sólidas. Possuem uma “juba”branca no rosto e orelhas com longos tufos pretos. 
             A ponta da cauda também é preta. Os linces-ibéricos, como o próprio nome diz, estão 
-            restritos à península ibérica, em territórios da Espanha e Portugal.
+            restritos à península ibérica, em territórios da Espanha e Portugal.</br>
+            O lince-ibérico é nativo da península ibérica e atualmente é considerado uma espécie 
+            em perigo crítico de extinção, segundo estudos da IUCN.</br>
+            O grande problema enfrentado por esse felino, existente somente em Portugal e Espanha, é a degradação 
+            de seu habitat. Segundo pesquisas, atualmente existem menos de 200 indivíduos vivos da espécie.
         </br></br></p>
 
         <li>Lince-do-Canadá (Lynx canadensis)</li>
